feat: switch from Thirdweb to Web3Auth for Google Login

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,20 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@iexec/dataprotector": "^2.0.0-beta.23",
+    "@web3auth/base": "^9.7.0",
+    "@web3auth/ethereum-provider": "^9.7.0",
+    "@web3auth/modal": "^9.7.0",
     "clsx": "^2.1.1",
-    "ethers": "^6.16.0",
     "iexec": "^8.22.5",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "viem": "^2.45.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
